Dashboard, Portfolio und Performance verbessert